--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Wahid Rizka Fathurrohman</title>
+		<meta
+			name="description"
+			content="Wahid Rizka Fathurrohman - Fullstack Developer with a passion for Software Engineering, combining creativity in frontend development and solid MVC approach in backend."
+		/>
 	</head>
 	<body>
 		<div id="root"></div>
